--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,29 @@
 /* All styles for your Card Components live here */
+
+.card-container{
+    width: 92%;
+    margin-top: 1rem;
+    margin-left: 7%;
+    border: .1rem solid lightgray;
+    border-bottom-left-radius: .8rem;
+    border-bottom-right-radius: .8rem;
+}
+
+.banner-img{
+    width: 100%;
+    border-top-left-radius: .8rem;
+    border-top-right-radius: .8rem;
+}
+
+.card-content-container{
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: black;
+}
+
+.card-content{
+    /* width:  */
+}
+
