--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -37,11 +37,13 @@
     width: 30%;
     height: 100%;
     background: red;
+    display: flex;
+    flex-direction: column;
 }
 
 .digits{
     width: 100%;
-    height: 65%;
+    height: 60%;
     display: flex;
     flex-wrap: wrap;
 }
